# blender-materialx-importer

./: CONTRIBUTING.md  README.md  pyproject.toml
examples/: import_material.py  simple_standard_surface.mtlx
materialx_importer/: __init__.py  blender_nodes.py  document.py  surfaces.py  types.py  values.py
materialx_importer/nodes/: __init__.py  geometry.py  math.py  matrix.py  mix.py  noise.py  ramps.py  structure.py  switch.py  texture.py
tests/: conftest.py  test_document.py  test_noise.py  test_values.py
